--- a/style.css
+++ b/style.css
@@ -1,2 +1,2 @@
-.container{max-width:1600px;margin:0 auto}
+body{margin:0}.container{max-width:1600px;margin:0 auto}.nav{padding:10px;background-color:#cecece}.nav__list{display:-webkit-box;display:-ms-flexbox;display:flex;margin:0;padding:0;list-style-type:none}.nav__link{display:block;padding:4px 12px;color:#ffffff;text-decoration:none;background-color:#404040;-webkit-transition:background-color 0.2s ease-in;transition:background-color 0.2s ease-in}.nav__link:hover{background-color:#5a5a5a}
 /*# sourceMappingURL=style.css.map */
