--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,33 @@
+body {
+    margin: 0;
+}
+
 .container {
     max-width: 1600px;
     margin: 0 auto;
+}
+
+.nav {
+    padding: 10px;
+    background-color: #cecece;
+    &__list {
+        display: flex;
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+    }
+    &__item {
+
+    }
+    &__link {
+        display: block;
+        padding: 4px 12px;
+        color: #ffffff;
+        text-decoration: none;
+        background-color: #404040;
+        transition: background-color 0.2s ease-in;
+        &:hover {
+            background-color: lighten($color: #404040, $amount: 10%);
+        }
+    }
 }
